# detection_calibration

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
example_scripts/: autonomous_driving_example.py  common_objects_example.py
src/detection_calibration/: DetectionCalibration.py  coco_calibration.py  lvis_calibration.py  platt_scaling.py  utils.py
src/detection_calibration/lvis/: eval.py  lvis.py  results.py
src/detection_calibration/pycocotools_lrp/: coco.py  cocoeval.py  default_cocoeval.py
tutorials/: autonomous_driving.py  common_objects.py
