[project]
name = "detection_calibration"
version = "0.0.1"
authors = [
  { name="Selim Kuzucu", email="selim686kuzucu@gmail.com" },
]
description = "detection_calibration library for post-hoc calibration and reliability benchmarking of object detectors"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = ["numpy", "scipy", "scikit-learn", "torch", "torchvision", "matplotlib", "imageio", "lvis", "pycocotools", "opencv-python"]


[project.urls]
Homepage = "https://github.com/fiveai/detection_calibration"
Issues = "https://github.com/fiveai/detection_calibration"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_single_line = true
